--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -45,6 +45,7 @@
 // 05.- Pages - import of pages
 // =========================
 @import "05-pages/home";
+@import "05-pages/landing";
 
 // =========================
 // 06.- Shame
