--- a/src/assets/scss/05-pages/_home.scss
+++ b/src/assets/scss/05-pages/_home.scss
@@ -10,4 +10,68 @@
     background-color: white;
     box-shadow: 0px -5px 4px rgba(0, 0, 0, 0.05);
   }
+  &__not-found {
+    padding: 2rem;
+    max-width: 400px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h3 {
+      font-size: 2.5rem;
+    }
+    p {
+      color: #5E5E5E;
+      margin-bottom: 1.5rem;
+    }
+  }
+  .loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #F9F9F9;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .image {
+      transform: rotateZ(-20deg);
+      transform-origin: bottom center;
+      animation-name: rotateBall;
+      animation-duration: 1s;
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+      position: relative;
+      width: 5.5rem;
+
+      &:after {
+        content: '';
+        position: absolute;
+        top: 49%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        display: block;
+        border-radius: 50%;
+        width: 19px;
+        height: 19px;
+        background-color: $g-primary;
+        animation-name: activeBall;
+        animation-duration: 1s;
+        animation-direction: alternate;
+        animation-iteration-count: infinite;
+      }
+    }
+    @keyframes activeBall {
+      from {background-color: $g-primary;}
+      to {background-color: transparent;}
+    }
+    @keyframes rotateBall {
+      from {transform: rotateZ(-20deg);}
+      to {transform: rotateZ(20deg);}
+    }
+  }
 }
